src/envoy/authz/tests/dikastes.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: envoy-client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: envoy-client 
        version: v1
    spec:
      containers:
      - name: envoy-client
        image: quay.io/saurabh/dtp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /tmp/dikastes
          name: test-volume
      volumes:
        - name: test-volume
          hostPath:
            # directory location on host
            path: /tmp/dikastes
            # this field is optional
            # type: Socket
