src/envoy/authz/tests/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:9090",
      "bind_to_port": true,
      "ssl_context": {
        "cert_chain_file": "./certs/test.server.com.crt",
        "private_key_file": "./certs/server.key",
        "ca_cert_file": "./certs/istio.test1-root-cert.pem",
        "require_client_certificate": true
      },
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
	    "generate_request_id": true,
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "service1",
                      "opaque_config": {
                        "mixer_control": "on",
                        "mixer_forward": "off"
                      }
                    }
                  ]
                }
              ]
            },
            "access_log": [
              {
                "path": "/dev/stdout"
              }
            ],
           "filters": [
             {
              "type": "decoder",
              "name": "authz",
              "config": {}
             },
             {
              "type": "decoder",
              "name": "router",
              "config": {}
             }
           ]
          }
        },
        {
         "type": "read",
         "name": "authz",
         "config": {}
        }
      ]
    },
    {
      "address": "tcp://0.0.0.0:7070",
      "bind_to_port": true,
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
	    "generate_request_id": true,
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "service2"
                    }
                  ]
                }
              ]
            },
            "access_log": [
              {
                "path": "/dev/stdout"
              }
            ],
           "filters": [
             {
              "type": "decoder",
              "name": "router",
              "config": {}
             }
           ]
          }
        }
      ]
    },
    {
      "address": "tcp://0.0.0.0:6060",
      "bind_to_port": true,
      "filters": [
        {
          "type": "read",
          "name": "tcp_proxy",
          "config": {
            "stat_prefix": "tcp",
            "route_config": {
              "routes": [
                {
                  "cluster": "service1"
                }
              ]
            }
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/stdout",
    "address": "tcp://0.0.0.0:9001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "service1",
        "connect_timeout_ms": 5000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:8080"
          }
        ]
      },
      {
        "name": "service2",
        "connect_timeout_ms": 5000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:9090"
          }
        ]
      },
      {
        "name": "mixer_server",
        "connect_timeout_ms": 5000,
        "type": "strict_dns",
	"circuit_breakers": {
           "default": {
	      "max_pending_requests": 10000,
	      "max_requests": 10000
            }
	},
        "lb_type": "round_robin",
        "features": "http2",
        "hosts": [
          {
            "url": "tcp://localhost:9092"
          }
        ]
      }
    ]
  }
}
